--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "redmine_reporter"
 version = "0.1.0"
 authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
 
+[features]
+dev = ["clippy"]
+
 [dependencies]
 hyper = "~0.9.0"
 toml = "~0.1"
 rustc-serialize = "~0.3.18"
 time = "~0.1.35"
+clippy = {version = '0.0.67', optional = true}
