--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ dev = ["clippy"]
 
 [dependencies]
 hyper = "~0.9.0"
-toml = "~0.1"
-rustc-serialize = "~0.3.18"
+toml = "~0.3"
+serde = "0.9"
+serde_derive = "0.9"
+serde_json = "0.9"
 time = "~0.1.35"
 clippy = {version = '0.0.67', optional = true}
