--- a/src/settings.toml.sample
+++ b/src/settings.toml.sample
@@ -5,3 +5,4 @@ project_id = "<Project ID>"
 tracker_id = "<Tracker ID>"
 title_suffix = "suffix"
 description = "description"
+specify_deadline = false
