--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ environment:
     - TARGET: x86_64-pc-windows-msvc
       BITS: 64
       RUSTVER: 1.22.1
-      OPENSSLVER: 1_0_2m
+      OPENSSLVER: 1_0_2o
 install:
   - ps: Start-FileDownload "http://slproweb.com/download/Win${env:BITS}OpenSSL-${env:OPENSSLVER}.exe"
   - Win%BITS%OpenSSL-%OPENSSLVER%.exe /SILENT /VERYSILENT /SP- /DIR="C:\OpenSSL"
