--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 dev = ["clippy"]
 
 [dependencies]
-hyper = "~0.9.0"
+reqwest = "~0.8.0"
 toml = "~0.3"
 serde = "0.9"
 serde_derive = "0.9"
